--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,8 @@
    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 
-    <application android:label="@string/app_name" android:description="@string/app_description" android:icon="@drawable/clouddevday" android:debuggable="true">
+    <application android:label="@string/app_name" android:description="@string/app_description" android:icon="@drawable/clouddevday" 
+    android:debuggable="true">
 				<activity android:name="SplashScreenActivity"
 				android:label="@string/app_name"
 				android:theme="@style/Theme.Transparent">
